# DjangoREST

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
videos/: admin.py  generator.py  models.py  serializers.py  tasks.py  urls.py  views.py
videos/migrations/: 0001_initial.py
youtube_sim/: celery.py  settings.py  wsgi.py
