[project]
name = "youtube-sim"
version = "0.1.0"
description = "YouTube Integration Simulation with Django"
requires-python = ">=3.12"
dependencies = [
    "django>=4.2,<5.0",
    "djangorestframework>=3.14,<4.0",
    "psycopg2-binary>=2.9,<3.0",
    "celery>=5.3,<6.0",
    "redis>=5.0,<6.0",
    "django-celery-beat>=2.5,<3.0",
]

[dependency-groups]
dev = []
